<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fond"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:fontFamily="@font/wargate_normal"
        android:textSize="40sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/light_grey"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/newGame"
            android:fontFamily="@font/wargate_normal"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/light_grey"
            android:textColor="@color/red_brown"
            android:onClick="clickNewGame"/>

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/score"
            android:fontFamily="@font/wargate_normal"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/light_grey"
            android:textColor="@color/red_brown"
            android:onClick="clickScore"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/difficulty"
            android:fontFamily="@font/wargate_normal"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:background="@color/steel_grey"
            android:textColor="@color/red_brown"
            android:gravity="center"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"/>

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/exit"
            android:fontFamily="@font/wargate_normal"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/light_grey"
            android:textColor="@color/red_brown"
            android:onClick="clickExit"/>

    </LinearLayout>
</LinearLayout>